project(camera)
cmake_minimum_required(VERSION 2.8)

set(CLIENT_TARGET "camera")

include_directories(
  ./src
  ${DEMON_INCLUDE})

file(GLOB_RECURSE CLIENT_SRC_LIST 
  "${DEMON_SRC}/*.cpp"
  "${DEMON_SRC}/*.h"
  "${DEMON_SRC}/*.c"
  "${DEMON_SRC}/*.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp"
)

file(GLOB_RECURSE CLIENT_RES_LIST
	"${CMAKE_CURRENT_SOURCE_DIR}/res/*.*"
)

file(GLOB_RECURSE CLIENT_SHADER_LIST
	"${CMAKE_CURRENT_SOURCE_DIR}/shader/*.*"
)

file(GLOB_RECURSE CLIENT_GLM_LIST
	"${DEMON_ROOT}/include/glm/*.*"
)


link_directories("${DEMON_LIB}" "${DEMON_LIB}/$<CONFIGURATION>")
link_libraries("glfw3.lib" "opengl32.lib" "glad.lib")
## 
add_executable(${CLIENT_TARGET} ${CLIENT_SRC_LIST} ${CLIENT_GLM_LIST})

source_group("src" FILES ${CLIENT_SRC_LIST})
source_group("glm" FILES ${CLIENT_GLM_LIST})

SET_TARGET_OUT_DIR(CLIENT_TARGET_OUT_DIR)
set(CLIENT_RES_FILES "0001.jpg" "0002.png")
set(CLIENT_RES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/res")
COPY_FILES("${CLIENT_TARGET}" "${CLIENT_RES_FILES}" "${CLIENT_RES_DIR}" "${CLIENT_TARGET_OUT_DIR}")
COPY_FILES("${CLIENT_TARGET}" "${CLIENT_RES_FILES}" "${CLIENT_RES_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
set(CLIENT_SHADER_FILES "0001.vs" "0001.fs")
set(CLIENT_SHADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shader")
COPY_FILES("${CLIENT_TARGET}" "${CLIENT_SHADER_FILES}" "${CLIENT_SHADER_DIR}" "${CLIENT_TARGET_OUT_DIR}")
COPY_FILES("${CLIENT_TARGET}" "${CLIENT_SHADER_FILES}" "${CLIENT_SHADER_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")